Adding removal of the Agency Consultant Roles
Adding removal of the Agency Consultant Roles

POC WIP

We now have "cross aggregate" validation requirements.
